Rewrite LocationControllerTest to use MockMvc with @SpringBootTest
Replace direct controller method calls with MockMvc.perform() integration
tests. Use @MockBean for LocationRepository, LocationMapper, DbInteractions,
and DbConfig. Test happy paths, 404 not-found, 500 error, 204 no-content,
and empty list cases for all endpoints with JSON response body assertions.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

Co-authored-by: dmccoystephenson <21204351+dmccoystephenson@users.noreply.github.com>